<resources>
    <string name="app_name">Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_note">Мои заметки</string>
    <string name="input_note">Введите текст заметки</string>
    <string name="add_button">Добавить</string>
    <string name="exit">Exit</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="change_note">Изменить текст заметки</string>
    <string name="note_text_here">Note text here</string>
    <string name="date">12:00, 01/01/2022</string>
    <string name="_1">1</string>
    <string name="close">Выход</string>
</resources>