<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/note_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"/>
    <TextView
        android:id="@+id/note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:text="@string/note_text_here"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/note_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"/>
    <CheckBox
        android:id="@+id/note_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
